--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
             <div class="modal__subheader">Мы свяжемся с вами, чтобы обсудить детали заказа</div>
             <div class="modal__elements block-center-horis">
                 <div class="modal__input">
-                    <input type="text" class="modal__input">
+                    <input type="text" class="modal__input" placeholder="Enter your Name">
                 </div>
                 <div class="modal__input">
-                    <input type="tel" class="modal__input">
+                    <input type="tel" class="modal__input" placeholder="Enter your Phone number">
                 </div>
                 <div class="modal__input">
-                    <input type="email" class="modal__input">
+                    <input type="email" class="modal__input" placeholder="Enter your email Address">
                 </div>
                 <button type="submit" class="button modal__button">Отправить</button>
             </div>
