--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <input type="tel" class="modal__input" placeholder="Enter your Phone number">
                 </div>
                 <div class="modal__input">
-                    <input type="email" class="modal__input" placeholder="Enter your email Address">
+                    <input type="email" class="modal__input" placeholder="Enter your Email address">
                 </div>
                 <button type="submit" class="button modal__button">Отправить</button>
             </div>
