--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Собираем ПК</title>
 
     <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest"></script>
@@ -281,18 +282,22 @@
             <div class="modal__subheader">Мы свяжемся с вами, чтобы обсудить детали заказа</div>
             <div class="modal__elements block-center-horis">
                 <div class="modal__input">
-                    <input type="text" class="modal__input">
+                    <input type="text" class="modal__input" placeholder="Enter your Name">
                 </div>
                 <div class="modal__input">
-                    <input type="tel" class="modal__input">
+                    <input type="tel" class="modal__input" placeholder="Enter your Phone number">
                 </div>
                 <div class="modal__input">
-                    <input type="email" class="modal__input">
+                    <input type="email" class="modal__input" placeholder="Enter your email Address">
                 </div>
                 <button type="submit" class="button modal__button">Отправить</button>
             </div>
         </div>
     </form>
+
+    
+
+
 
     <style>
         .toUp {
